# python.berlin

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.rst  conf.py  constraints.txt  index.rst  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: pre-commit.yml
django-user-group-berlin/: index.rst
djangogirls-berlin/: index.rst
docs/: collaboration.rst  conf.py  index.rst
docs/django-user-group-berlin/: index.rst
docs/opentechschool-berlin/: index.rst
docs/pub/: index.rst  wish-list.rst
docs/pub/reference-library/: index.rst
docs/pub/resources/: index.rst
docs/pydata-berlin/: index.rst
docs/pyladies-berlin/: index.rst
pub/: index.rst  reference-library.rst  wish-list.rst
pub/reference-library/: index.rst
pub/resources/: index.rst
pyberlin/: index.rst
