[project]
name = "python.berlin"
version = "24.1.0"
authors = [
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = "Berlin Python User Groups"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx-design",
    "furo",
    "sphinxext-opengraph",
    "sphinx-copybutton",
]

dev = [
    "python.berlin[docs]",
    "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/python-berlin/python.berlin"
"Bug Tracker" = "https://github.com/python-berlin/python.berlin/issues"

[tool.setuptools]
packages = []

[tool.black]
line-length = 79

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip="__init__.py"
use_parentheses=true
